ureq = "2"
[package]
name = "status_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
hostname = "0.3"
local-ip-address = "0.5"
ureq = "2"
humantime = "2"
get_if_addrs = "0.5"
dotenv = "0.15"
